@@ -19,25 +19,25 @@
 package org.apache.fineract.portfolio.loanproduct.productmix.service;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import org.apache.fineract.infrastructure.core.api.JsonCommand;
-import org.apache.fineract.infrastructure.core.data.CommandProcessingResult;
-import org.apache.fineract.infrastructure.core.data.CommandProcessingResultBuilder;
 import org.apache.fineract.infrastructure.core.exception.ErrorHandler;
 import org.apache.fineract.infrastructure.security.service.PlatformSecurityContext;
 import org.apache.fineract.portfolio.loanproduct.domain.LoanProduct;
 import org.apache.fineract.portfolio.loanproduct.domain.LoanProductRepository;
 import org.apache.fineract.portfolio.loanproduct.exception.LoanProductNotFoundException;
+import org.apache.fineract.portfolio.loanproduct.productmix.data.ProductMixCreateRequest;
+import org.apache.fineract.portfolio.loanproduct.productmix.data.ProductMixCreateResponse;
+import org.apache.fineract.portfolio.loanproduct.productmix.data.ProductMixDeleteRequest;
+import org.apache.fineract.portfolio.loanproduct.productmix.data.ProductMixDeleteResponse;
+import org.apache.fineract.portfolio.loanproduct.productmix.data.ProductMixUpdateRequest;
+import org.apache.fineract.portfolio.loanproduct.productmix.data.ProductMixUpdateResponse;
 import org.apache.fineract.portfolio.loanproduct.productmix.domain.ProductMix;
 import org.apache.fineract.portfolio.loanproduct.productmix.domain.ProductMixRepository;
 import org.apache.fineract.portfolio.loanproduct.productmix.exception.ProductMixNotFoundException;
-import org.apache.fineract.portfolio.loanproduct.productmix.serialization.ProductMixDataValidator;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -52,109 +52,74 @@ import org.springframework.util.CollectionUtils;
 public class ProductMixWritePlatformServiceJpaRepositoryImpl implements ProductMixWritePlatformService {
 
     private static final Logger LOG = LoggerFactory.getLogger(ProductMixWritePlatformServiceJpaRepositoryImpl.class);
+
     private final PlatformSecurityContext context;
-    private final ProductMixDataValidator fromApiJsonDeserializer;
     private final ProductMixRepository productMixRepository;
     private final LoanProductRepository productRepository;
 
     @Autowired
     public ProductMixWritePlatformServiceJpaRepositoryImpl(final PlatformSecurityContext context,
-            final ProductMixDataValidator fromApiJsonDeserializer, final ProductMixRepository productMixRepository,
-            final LoanProductRepository productRepository) {
+            final ProductMixRepository productMixRepository, final LoanProductRepository productRepository) {
         this.context = context;
-        this.fromApiJsonDeserializer = fromApiJsonDeserializer;
         this.productMixRepository = productMixRepository;
         this.productRepository = productRepository;
     }
 
     @Transactional
     @Override
-    public CommandProcessingResult createProductMix(final Long productId, final JsonCommand command) {
-
+    public ProductMixCreateResponse createProductMix(final ProductMixCreateRequest request) {
         try {
-
             this.context.authenticatedUser();
 
-            this.fromApiJsonDeserializer.validateForCreate(command.json());
+            final Long productId = request.getProductId();
+            final List<Long> restrictedProducts = request.getRestrictedProducts();
 
-            final Set<String> restrictedIds = new HashSet<>(Arrays.asList(command.arrayValueOfParameterNamed("restrictedProducts")));
+            final Set<Long> restrictedIds = Set.copyOf(restrictedProducts);
 
-            // remove the existed restriction if it is not exists in
-            // restrictedIds.
             final List<Long> removedRestrictions = updateRestrictionsForProduct(productId, restrictedIds);
             final Map<Long, LoanProduct> restrictedProductsAsMap = getRestrictedProducts(restrictedIds);
             final List<ProductMix> productMixes = new ArrayList<>();
 
             createNewProductMix(restrictedProductsAsMap, productId, productMixes);
-
             this.productMixRepository.saveAll(productMixes);
 
+            final List<Long> removedRestrictedProductIds = removedRestrictions.isEmpty() ? List.of()
+                    : this.productMixRepository.findAllById(removedRestrictions).stream().map(ProductMix::getRestrictedProductId).toList();
+
             final Map<String, Object> changes = new LinkedHashMap<>();
-            changes.put("restrictedProductsForMix", restrictedProductsAsMap.keySet());
-            changes.put("removedProductsForMix", removedRestrictions);
-            return new CommandProcessingResultBuilder().withProductId(productId).with(changes).withCommandId(command.commandId()).build();
+            changes.put("restrictedProductsForMix", new ArrayList<>(restrictedProductsAsMap.keySet()));
+            changes.put("removedProductsForMix", removedRestrictedProductIds);
+
+            return ProductMixCreateResponse.builder().productId(productId).changes(changes).build();
         } catch (final JpaSystemException | DataIntegrityViolationException dve) {
-
-            handleDataIntegrityIssues(dve);
-            return CommandProcessingResult.empty();
+            throw handleDataIntegrityIssues(dve);
         }
     }
 
-    private List<Long> updateRestrictionsForProduct(final Long productId, final Set<String> restrictedIds) {
-
-        final List<Long> removedRestrictions = new ArrayList<>();
-        final List<ProductMix> mixesToRemove = new ArrayList<>();
-
-        final List<ProductMix> existedProductMixes = this.productMixRepository.findRestrictedProducts(productId);
-        for (final ProductMix productMix : existedProductMixes) {
-            if (!restrictedIds.contains(productMix.getProductId().toString())) {
-                mixesToRemove.add(productMix);
-                removedRestrictions.add(productMix.getId());
-            }
-        }
-        if (!CollectionUtils.isEmpty(mixesToRemove)) {
-            this.productMixRepository.deleteAll(mixesToRemove);
-        }
-        return removedRestrictions;
-    }
-
-    private void createNewProductMix(final Map<Long, LoanProduct> restrictedProductsAsMap, final Long productId,
-            final List<ProductMix> productMixes) {
-
-        final LoanProduct productMixInstance = findByProductIdIfProvided(productId);
-        for (final LoanProduct restrictedProduct : restrictedProductsAsMap.values()) {
-            final ProductMix productMix = ProductMix.createNew(productMixInstance, restrictedProduct);
-            productMixes.add(productMix);
-        }
-    }
-
+    @Transactional
     @Override
-    public CommandProcessingResult updateProductMix(final Long productId, final JsonCommand command) {
-
+    public ProductMixUpdateResponse updateProductMix(final ProductMixUpdateRequest request) {
         try {
             this.context.authenticatedUser();
-            this.fromApiJsonDeserializer.validateForUpdate(command.json());
+
+            final Long productId = request.getProductId();
+            final List<Long> restrictedProducts = request.getRestrictedProducts();
             final Map<String, Object> changes = new LinkedHashMap<>();
 
             final List<ProductMix> existedProductMixes = new ArrayList<>(this.productMixRepository.findByProductId(productId));
             if (CollectionUtils.isEmpty(existedProductMixes)) {
                 throw new ProductMixNotFoundException(productId);
             }
-            final Set<String> restrictedIds = new HashSet<>(Arrays.asList(command.arrayValueOfParameterNamed("restrictedProducts")));
 
-            // updating with empty array means deleting the existed records.
-            if (restrictedIds.isEmpty()) {
+            if (restrictedProducts.isEmpty()) {
                 final List<Long> removedRestrictedProductIds = this.productMixRepository.findRestrictedProductIdsByProductId(productId);
                 this.productMixRepository.deleteAll(existedProductMixes);
                 changes.put("removedProductsForMix", removedRestrictedProductIds);
-                return new CommandProcessingResultBuilder().with(changes).withProductId(productId).withCommandId(command.commandId())
-                        .build();
+
+                return ProductMixUpdateResponse.builder().productId(productId).changes(changes).build();
             }
 
-            /*
-             * if restrictedProducts array is not empty delete the duplicate ids which are already exists and update
-             * existedProductMixes
-             */
+            final Set<Long> restrictedIds = Set.copyOf(restrictedProducts);
             final List<ProductMix> productMixesToRemove = updateRestrictedIds(restrictedIds, existedProductMixes);
             final Map<Long, LoanProduct> restrictedProductsAsMap = getRestrictedProducts(restrictedIds);
             createNewProductMix(restrictedProductsAsMap, productId, existedProductMixes);
@@ -166,11 +131,61 @@ public class ProductMixWritePlatformServiceJpaRepositoryImpl implements ProductM
                 this.productMixRepository.deleteAll(productMixesToRemove);
                 changes.put("removedProductsForMix", getProductIdsFromCollection(productMixesToRemove));
             }
-            return new CommandProcessingResultBuilder().with(changes).withProductId(productId).withCommandId(command.commandId()).build();
-        } catch (final JpaSystemException | DataIntegrityViolationException dve) {
 
-            handleDataIntegrityIssues(dve);
-            return CommandProcessingResult.empty();
+            return ProductMixUpdateResponse.builder().productId(productId).changes(changes).build();
+        } catch (final JpaSystemException | DataIntegrityViolationException dve) {
+            throw handleDataIntegrityIssues(dve);
+        }
+    }
+
+    @Transactional
+    @Override
+    public ProductMixDeleteResponse deleteProductMix(final ProductMixDeleteRequest request) {
+        try {
+            this.context.authenticatedUser();
+
+            final Long productId = request.getProductId();
+            final Map<String, Object> changes = new LinkedHashMap<>();
+
+            final List<ProductMix> existedProductMixes = this.productMixRepository.findByProductId(productId);
+            if (CollectionUtils.isEmpty(existedProductMixes)) {
+                throw new ProductMixNotFoundException(productId);
+            }
+
+            changes.put("removedProductsForMix", getProductIdsFromCollection(existedProductMixes));
+            this.productMixRepository.deleteAll(existedProductMixes);
+
+            return ProductMixDeleteResponse.builder().productId(productId).changes(changes).build();
+        } catch (final JpaSystemException | DataIntegrityViolationException dve) {
+            throw handleDataIntegrityIssues(dve);
+        }
+    }
+
+    private List<Long> updateRestrictionsForProduct(final Long productId, final Set<Long> restrictedIds) {
+        final List<Long> removedRestrictions = new ArrayList<>();
+        final List<ProductMix> mixesToRemove = new ArrayList<>();
+
+        final List<ProductMix> existedProductMixes = this.productMixRepository.findRestrictedProducts(productId);
+        for (final ProductMix productMix : existedProductMixes) {
+            if (!restrictedIds.contains(productMix.getRestrictedProductId())) {
+                mixesToRemove.add(productMix);
+                removedRestrictions.add(productMix.getId());
+            }
+        }
+
+        if (!CollectionUtils.isEmpty(mixesToRemove)) {
+            this.productMixRepository.deleteAll(mixesToRemove);
+        }
+
+        return removedRestrictions;
+    }
+
+    private void createNewProductMix(final Map<Long, LoanProduct> restrictedProductsAsMap, final Long productId,
+            final List<ProductMix> productMixes) {
+        final LoanProduct productMixInstance = findByProductIdIfProvided(productId);
+        for (final LoanProduct restrictedProduct : restrictedProductsAsMap.values()) {
+            final ProductMix productMix = ProductMix.createNew(productMixInstance, restrictedProduct);
+            productMixes.add(productMix);
         }
     }
 
@@ -178,56 +193,37 @@ public class ProductMixWritePlatformServiceJpaRepositoryImpl implements ProductM
         return this.productRepository.findById(productId).orElseThrow(() -> new LoanProductNotFoundException(productId));
     }
 
-    private Map<Long, LoanProduct> getRestrictedProducts(final Set<String> restrictedIds) {
-
+    private Map<Long, LoanProduct> getRestrictedProducts(final Set<Long> restrictedIds) {
         final Map<Long, LoanProduct> restrictedProducts = new HashMap<>();
 
-        for (final String restrictedId : restrictedIds) {
-            final Long restrictedIdAsLong = Long.valueOf(restrictedId);
-            final LoanProduct restrictedProduct = findByProductIdIfProvided(Long.valueOf(restrictedId));
-            restrictedProducts.put(restrictedIdAsLong, restrictedProduct);
+        for (final Long restrictedId : restrictedIds) {
+            final LoanProduct restrictedProduct = findByProductIdIfProvided(restrictedId);
+            restrictedProducts.put(restrictedId, restrictedProduct);
         }
+
         return restrictedProducts;
     }
 
-    private void handleDataIntegrityIssues(final NonTransientDataAccessException dve) {
+    private RuntimeException handleDataIntegrityIssues(final NonTransientDataAccessException dve) {
         LOG.error("Error occurred.", dve);
-        throw ErrorHandler.getMappable(dve, "error.msg.product.loan.unknown.data.integrity.issue",
+        return ErrorHandler.getMappable(dve, "error.msg.product.loan.unknown.data.integrity.issue",
                 "Unknown data integrity issue with resource.");
     }
 
-    private List<ProductMix> updateRestrictedIds(final Set<String> restrictedIds, final List<ProductMix> existedProductMixes) {
-
+    private List<ProductMix> updateRestrictedIds(final Set<Long> restrictedIds, final List<ProductMix> existedProductMixes) {
         final List<ProductMix> productMixesToRemove = new ArrayList<>();
+
         for (final ProductMix productMix : existedProductMixes) {
-            final String currentMixId = productMix.getRestrictedProductId().toString();
+            final Long currentMixId = productMix.getRestrictedProductId();
             if (restrictedIds.contains(currentMixId)) {
                 restrictedIds.remove(currentMixId);
             } else {
                 productMixesToRemove.add(productMix);
             }
         }
+
         existedProductMixes.removeAll(productMixesToRemove);
         return productMixesToRemove;
-    }
-
-    @Override
-    public CommandProcessingResult deleteProductMix(final Long productId) {
-        try {
-            this.context.authenticatedUser();
-            final Map<String, Object> changes = new LinkedHashMap<>();
-
-            final List<ProductMix> existedProductMixes = this.productMixRepository.findByProductId(productId);
-            if (CollectionUtils.isEmpty(existedProductMixes)) {
-                throw new ProductMixNotFoundException(productId);
-            }
-            this.productMixRepository.deleteAll(existedProductMixes);
-            changes.put("removedProductsForMix", getProductIdsFromCollection(existedProductMixes));
-            return new CommandProcessingResultBuilder().with(changes).withProductId(productId).build();
-        } catch (final JpaSystemException | DataIntegrityViolationException dve) {
-            handleDataIntegrityIssues(dve);
-            return CommandProcessingResult.empty();
-        }
     }
 
     private List<Long> getProductIdsFromCollection(final List<ProductMix> collection) {
@@ -237,5 +233,4 @@ public class ProductMixWritePlatformServiceJpaRepositoryImpl implements ProductM
         }
         return productIds;
     }
-
 }
